<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnSearchString">Search</string>
    <string name="tipQuery">Enter search term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search_filter">Search Filter</string>
    <string name="Advancesearchlabel">Advanced search options</string>
    <string name="imagesize">Image Size</string>
    <string name="colorfilter">Color Filter</string>
    <string name="imagetype">Image Type</string>
    <string name="sitefilter">Site Filter</string>
    <string-array name="image_size">
        <item>Any</item>
        <item>Icon</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XLarge</item>
        <item>XXLARGE</item>
        <item>Huge</item>
    </string-array>
    
        <string-array name="colors">
        <item>Any</item>  
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>        
        <item>Purple</item>
		<item>Red</item>
       	<item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
        </string-array>
        
        <string-array name="image_type">
        <item>Any</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Lineart</item>
    <!--    <item>Any  ~</item>
        <item>Face  :)</item>
        <item>Photo  [ ]</item>
        <item>Clipart  =>></item>
        <item>Lineart  {(S)}</item>
         --> 
    </string-array>
        <string name="hintSite">e.g. yahoo.com</string>
        <string name="share">Share</string>
    
</resources>
